terragrunt-video/EKS-VPC-NETWORK/nat_eip.tf
resource "aws_eip" "nat_eip" {
  vpc = true
  tags = {
    "Name" = "${var.environment}-nat-eip"
  }
}
